--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,17 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+                         <!-- Fontawesome-->
+
+    <link href="/fontawesome/css/all.css" rel="stylesheet" />
+
+                        <!-- DM SANS, UBUNTU MONO, OPEN SANS & EXO FONT-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Exo+2&family=Kanit:wght@800&family=Open+Sans:wght@400;800&family=Ubuntu+Mono&display=swap"
+      rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
