--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       content="Web site created using create-react-app"
     />
 
+    <link type="stylesheet" href="./index.css" />
+
+    
     
     <link rel="apple-touch-icon" sizes="180x180" href="/Favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/Favicon/favicon-32x32.png">
